--- a/templates/mines.html
+++ b/templates/mines.html
@@ -35,6 +35,12 @@ nav {
     font-size: 1.25rem;
 }
 
+.close {
+    cursor: pointer;
+    font-size: 1.4rem;
+    color: #9ca3af;
+}
+
 .balance-wrapper {
     margin-left: auto;
     position: relative;
@@ -456,6 +462,7 @@ button:hover { background: #333; }
 
 </body>
 </html>
+
 
 
 
