--- a/templates/mines.html
+++ b/templates/mines.html
@@ -35,12 +35,6 @@ nav {
     font-size: 1.25rem;
 }
 
-.close {
-    cursor: pointer;
-    font-size: 1.4rem;
-    color: #9ca3af;
-}
-
 .balance-wrapper {
     margin-left: auto;
     position: relative;
@@ -324,6 +318,8 @@ button:hover { background: #333; }
 </div>
 </main>
 
+<script>
+
     <script>
         
             const wrapper = document.querySelector('.balance-wrapper');
@@ -459,9 +455,36 @@ button:hover { background: #333; }
                 }
             };
     </script>
+</script>
 
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
