--- a/templates/mines.html
+++ b/templates/mines.html
@@ -386,8 +386,9 @@
             border-radius: 10px;
             padding: 6px 10px; 
             gap: 6px;
+            margin-top: 10px; 
         }
-        
+
         .bet-input input {
             background: transparent;
             border: none;
@@ -774,6 +775,7 @@ function setMaxBet() {
     </script>
 </body>
 </html>
+
 
 
 
