--- a/templates/mines.html
+++ b/templates/mines.html
@@ -396,8 +396,9 @@
             color: #fff;
             font-size: 0.95rem;
             width: 100%;
-            padding: 4px 0;
+            padding: 8px 0 4px 0; 
         }
+
         
         .currency,
         .emoji {
@@ -775,6 +776,7 @@ function setMaxBet() {
     </script>
 </body>
 </html>
+
 
 
 
