--- a/templates/mines.html
+++ b/templates/mines.html
@@ -538,9 +538,9 @@ function setMaxBet() {
     <main class="game-layout">
     <aside class="side-panel">
         <div class="panel-card">
-            <div class="mode-toggle">
-                <button class="mode active">Manual</button>
-            </div>
+            <!-- <div class="mode-toggle"> -->
+               <!--   <button class="mode active">Manual</button>  -->
+             <!-- </div> -->
 
             <div class="field">
                 <div class="field-header">
@@ -812,6 +812,7 @@ function setMaxBet() {
     </script>
 </body>
 </html>
+
 
 
 
